refactor: refactor person service