@@ -1,6 +1,6 @@
 package com.filmorate.filmorateapi.media.person.usecase.user.impl;
 
-import com.filmorate.filmorateapi.media.person.mapper.PersonToPersonDemoResponseMapper;
+import com.filmorate.filmorateapi.media.person.mapper.PersonMapper;
 import com.filmorate.filmorateapi.media.person.model.Person;
 import com.filmorate.filmorateapi.media.person.service.PersonService;
 import com.filmorate.filmorateapi.media.person.usecase.user.PersonUserProfileUseCase;
@@ -9,16 +9,15 @@ import com.filmorate.filmorateapi.user.api.CurrentUserProfileApiService;
 import com.filmorate.filmorateapi.user.model.UserProfile;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class PersonUserProfileUseCaseFacade implements PersonUserProfileUseCase {
     private final PersonService personService;
     private final CurrentUserProfileApiService currentUserProfileApiService;
-    private final PersonToPersonDemoResponseMapper personToPersonDemoResponseMapper;
+    private final PersonMapper personMapper;
 
     @Override
     public void addPersonToFavorites(Long personId) {
@@ -39,6 +38,8 @@ public class PersonUserProfileUseCaseFacade implements PersonUserProfileUseCase 
     @Override
     public List<PersonDemoResponse> getFavoritePersons() {
         UserProfile userProfile = currentUserProfileApiService.currentUserProfile();
-        return personToPersonDemoResponseMapper.map(userProfile.getFavoritePersons().stream().toList());
+        return userProfile.getFavoritePersons().stream()
+                .map(personMapper::toPersonDemoResponse)
+                .collect(Collectors.toList());
     }
 }
